<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="logo_ISEN">Logo ISEN</string>

    <string name="text_intro">Connection</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_password">Password</string>
    <string name="button_validate">Validate</string>

    <string name="text_hello">Hello</string>
    <string name="button_life">Life cycle</string>
    <string name="button_save">Save</string>
    <string name="button_permissions">Permissions</string>
    <string name="button_webservices">Webservices</string>
    <string name="button_disconnect">Log out</string>


    <string name="text_life_cycle">Activity Life Cycle</string>

    <string name="text_frag1">First fragment</string>
    <string name="text_frag2">Second fragment</string>
    <string name="button_frag">Click to change fragments</string>
    <string name="onResume">Resume:</string>


    <string name="text_form">Complete form</string>
    <string name="text_form_name">Name</string>
    <string name="text_form_firstname">First name</string>
    <string name="text_form_birth_date">Date of birth</string>

    <string name="text_form_view">View data</string>

    <string name="text_picture">View data</string>
    <string name="text_avatar">Profile photo</string>

</resources>
